<resources>
    <string name="app_name">SolarPred</string>

    <!--LoginActivity-->
    <string name="tvId">아이디</string>
    <string name="tvPw">비밀번호</string>
    <string name="edtId">아이디를 입력해주세요</string>
    <string name="edtPw">비밀번호를 입력해주세요</string>
    <string name="findUser">아이디 비밀번호 찾기</string>
    <string name="btnLogin">로그인</string>
    <string name="autoLogin">자동로그인</string>

    <!--Fragment-->
    <string name="realTimeAOD">실시간발전량(W)</string>
    <string name="realTimePre">실시간예측발전량</string>
    <string name="mergeAOD">누적발전량</string>
    <string name="mergePre">실시간발전량</string>
    <string name="tvMerge">KWh</string>
    <string name="Solution">Solution</string>
    <string name="loading">loading...</string>
    <string name="realPercent2">% 입니다</string>
    <string name="realPercent1">예측률은</string>
    <string name="tvLastDate"></string>

</resources>